@@ -5,6 +5,8 @@ Current:
   * The size of images can now be restricted to any amount of centimeters.
   * On a few operating systems: The network indicator icon now knows how much CPU
     power maxima uses.
+  * Autocompletion now suggests the names of built-in packages for load(), batch()
+    and batchload().
   * wxMaxima can now handle requests to display raw lisp elements.
   * A drop-down box for changing cell styles
   * If an input cell is hidden and has no output it now is no more displayed
